<resources>
    <string name="app_name">VengappVeci</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">VengApp Veci</string>
    <string name="nav_header_subtitle">Venga lleve lleve</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Iniciar Sesión</string>
    <string name="menu_slideshow">Pedidos</string>

    <string name="buttonIniciarSesion">Iniciar Sesión</string>
    <string name="buttonRegistrarse">Registrarse</string>
    <string name="checkBoxRecuerdame">Recuerdame</string>
    <string name="editTextCorreo">Correo electrónico</string>
    <string name="editTextContrasena">Contraseña</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>

    <string name="title_activity_pantalla_principal">PantallaPrincipal</string>

    <string name="editTextBuscar">Buscar</string>
    <string name="editTextNombre">Ingrese su nombre</string>
    <string name="editTextCorreoElectronico">Ingrese su correo</string>
    <string name="editTextTelefono">Ingrese su teléfono</string>
    <string name="editTextpass1">Ingrese una contraseña</string>
    <string name="editTextPass2">Confirme su contraseña</string>

    <string name="buttonRegresar">Regresar</string>
    <string name="buttonCancelar">CANCELAR</string>
    <string name="buttonHacerPed">Hacer Pedido</string>
    <string name="buttonAgregar">Agregar al carrito</string>

    <string name="registrarse">Registrarse</string>
    <string name="carrito_de_compras">Carrito de compras</string>
    <string name="historial_de_pedidos">Historial de pedidos</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>

    <string name="imageViewFondoLogin">imageViewFondoLogin</string>
    <string name="imageViewTiendaLogo">imageViewTiendaLogo</string>
    <string name="imageViewProductoDetalleProducto">imageViewProductoDetalleProducto</string>

    <string name="textViewTotalDetPed">Total</string>
    <string name="textViewProdDet">Nombre</string>
    <string name="textiewProducto">Nombre Producto</string>
    <string name="textViewPrecioP">PRECIO</string>
    <string name="textViewPedidos">Pedidos</string>
    <string name="textViewpedido1">Pedido 1</string>
    <string name="textViewNombreP">Nombre Producto</string>
    <string name="textViewCantidad">CANTIDAD</string>
    <string name="textViewNumeroP">N</string>
    <string name="textViewPrecUni">Precio Unitario</string>
    <string name="textViewCantDet">Cantidad</string>
    <string name="textViewTotalDet">Total</string>
    <string name="textViewNameItemProduct">NombreProducto</string>
    <string name="textViewPrecioItemProduct">PrecioProducto</string>
    <string name="textViewNombre">NOMBRE</string>
    <string name="textViewSubtotal">SUBTOTAL</string>
    <string name="textViewFechaPedido">FECHA</string>
    <string name="textViewTotalPedido">TOTAL</string>
    <string name="textViewNombreProducto">Nombre</string>
    <string name="textViewPrecioProducto">Precio</string>
    <string name="imageViewItemProduct">imageViewItemProduct</string>
    <string name="textViewPrecioP2">$</string>
    <string name="imageViewMenosCant">imageViewMenosCant</string>
    <string name="imageViewMasCant">imageViewMasCant</string>
    <string name="textviewDetalleP">detalle</string>


</resources>