<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_registro"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/registrarse" />
        <item
            android:id="@+id/nav_carrito"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/carrito_de_compras" />
        <item
            android:id="@+id/nav_hpedidos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/historial_de_pedidos" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/cerrar_sesi_n" />
    </group>
</menu>