<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.luceromichael.vengappveci.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.luceromichael.vengappveci.ui.login.LoginFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_registro"
        android:name="com.luceromichael.vengappveci.ui.registro.RegistroFragment"
        android:label="@string/registrarse"
        tools:layout="@layout/fragment_registro" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.luceromichael.vengappveci.ui.logout.LogOutFragment"
        android:label="@string/cerrar_sesi_n"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_carrito"
        android:name="com.luceromichael.vengappveci.ui.carrito.CarritoFragment"
        android:label="@string/carrito_de_compras"
        tools:layout="@layout/fragment_carrito" />
</navigation>