<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewProdDet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewProdDet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPrecUni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/textViewPrecUni"
        app:layout_constraintEnd_toStartOf="@+id/textViewCantDet"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCantDet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/textViewCantDet"
        app:layout_constraintEnd_toStartOf="@+id/textViewTotalDet"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTotalDet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTotalDet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>