<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registro.RegistroFragment">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="389dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bodes"
        android:ems="10"
        android:hint="@string/editTextNombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <EditText
        android:id="@+id/editTextPass2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bodes"
        android:ems="10"
        android:hint="@string/editTextPass2"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/editTextpass1"
        app:layout_constraintStart_toStartOf="@+id/editTextpass1"
        app:layout_constraintTop_toBottomOf="@+id/editTextpass1" />

    <EditText
        android:id="@+id/editTextpass1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bodes"
        android:ems="10"
        android:hint="@string/editTextpass1"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/editTextTelefono"
        app:layout_constraintStart_toStartOf="@+id/editTextTelefono"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefono" />

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bodes"
        android:ems="10"
        android:hint="@string/editTextCorreoElectronico"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/editTextNombre"
        app:layout_constraintStart_toStartOf="@+id/editTextNombre"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

    <EditText
        android:id="@+id/editTextTelefono"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bodes"
        android:ems="10"
        android:hint="@string/editTextTelefono"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/editTextCorreo"
        app:layout_constraintStart_toStartOf="@+id/editTextCorreo"
        app:layout_constraintTop_toBottomOf="@+id/editTextCorreo" />

    <Button
        android:id="@+id/buttonRegistrarse"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bordesboton"
        android:text="@string/buttonRegistrarse"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bordesboton"
        android:text="@string/buttonCancelar"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegistrarse"
        app:layout_constraintStart_toStartOf="@+id/buttonRegistrarse"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrarse" />

    <ProgressBar
        android:id="@+id/loading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>