<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.CarritoFragment">

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageViewFondoLogin"
        android:layout_width="385dp"
        android:layout_height="438dp"
        android:contentDescription="@string/imageViewFondoLogin"
        app:layout_constraintBottom_toTopOf="@+id/imageViewFondoLogin2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />

    <ImageView
        android:id="@+id/imageViewFondoLogin2"
        android:layout_width="368dp"
        android:layout_height="124dp"
        android:contentDescription="@string/imageViewFondoLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFondoLogin"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/imageViewFondoLogin"
        app:srcCompat="@android:drawable/zoom_plate" />

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@drawable/bodes"
        android:drawableStart="@android:drawable/sym_action_email"
        android:ems="10"
        android:hint="@string/editTextCorreo"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFondoLogin"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFondoLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewFondoLogin"
        app:layout_constraintTop_toTopOf="@+id/imageViewFondoLogin"
        app:layout_constraintVertical_bias="0.394" />

    <Button
        android:id="@+id/buttonRegistrarse"
        android:layout_width="131dp"
        android:layout_height="50dp"
        android:textColor="#000000"
        android:background="@drawable/bordesboton"
        android:text="@string/buttonRegistrarse"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFondoLogin2"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFondoLogin2"
        app:layout_constraintStart_toStartOf="@+id/imageViewFondoLogin2"
        app:layout_constraintTop_toTopOf="@+id/imageViewFondoLogin2" />

    <EditText
        android:id="@+id/editTextContrasena"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/bodes"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:ems="10"
        android:hint="@string/editTextContrasena"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/editTextCorreo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextCorreo"
        app:layout_constraintTop_toBottomOf="@+id/editTextCorreo" />

    <Button
        android:id="@+id/buttonIniciarSesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#000000"
        android:background="@drawable/bordesboton"
        android:text="@string/buttonIniciarSesion"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxRecuerdame"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/checkBoxRecuerdame"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRecuerdame" />

    <CheckBox
        android:id="@+id/checkBoxRecuerdame"
        android:layout_width="168dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/checkBoxRecuerdame"
        app:layout_constraintEnd_toEndOf="@+id/editTextContrasena"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/editTextContrasena"
        app:layout_constraintTop_toBottomOf="@+id/editTextContrasena" />

    <ImageView
        android:id="@+id/imageViewTiendaLogo"
        android:layout_width="209dp"
        android:layout_height="281dp"
        android:contentDescription="@string/imageViewTiendaLogo"
        app:layout_constraintBottom_toTopOf="@+id/editTextCorreo"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFondoLogin"
        app:layout_constraintStart_toStartOf="@+id/imageViewFondoLogin"
        app:srcCompat="@drawable/shop_icon" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>