<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.iniciar_sesion.IniciarSesionFragment">

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="385dp"
        android:layout_height="389dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="368dp"
        android:layout_height="124dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/zoom_plate" />

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@drawable/bodes"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editTextCorreo"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.421" />

    <Button
        android:id="@+id/buttonRegistrarse"
        android:layout_width="131dp"
        android:layout_height="50dp"
        android:textColor="#000000"
        android:background="@drawable/bordesboton"
        android:text="@string/buttonRegistrarse"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextContrasena"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bodes"
        android:autofillHints=""
        android:textAlignment="center"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editTextContrasena"
        app:layout_constraintEnd_toEndOf="@+id/editTextCorreo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextCorreo"
        app:layout_constraintTop_toBottomOf="@+id/editTextCorreo" />

    <Button
        android:id="@+id/buttonIniciarSesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#000000"
        android:background="@drawable/bordesboton"
        android:text="@string/buttonIniciarSesion"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxRecuerdame"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/checkBoxRecuerdame"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRecuerdame" />

    <CheckBox
        android:id="@+id/checkBoxRecuerdame"
        android:layout_width="168dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/checkBoxRecuerdame"
        app:layout_constraintEnd_toEndOf="@+id/editTextContrasena"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/editTextContrasena"
        app:layout_constraintTop_toBottomOf="@+id/editTextContrasena" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="209dp"
        android:layout_height="281dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextCorreo"
        app:layout_constraintStart_toStartOf="@+id/editTextCorreo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shop_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>