<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondogradiente"
    tools:context=".DetalleProducto">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="0dp"
        android:layout_height="312dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="60dp"
        android:layout_height="76dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNumeroP"
        app:layout_constraintEnd_toStartOf="@+id/textViewNumeroP"
        app:layout_constraintTop_toTopOf="@+id/textViewNumeroP"
        app:srcCompat="@drawable/removeicon" />

    <TextView
        android:id="@+id/textViewNombreP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textViewNombreP"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="191dp"
        android:layout_height="172dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?android:attr/textSelectHandle" />

    <TextView
        android:id="@+id/textViewCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textViewCantidad"
        app:layout_constraintEnd_toEndOf="@+id/textViewNombreP"
        app:layout_constraintStart_toStartOf="@+id/textViewNombreP"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombreP" />

    <Button
        android:id="@+id/buttonAgregar"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bordesboton"
        android:text="@string/buttonAgregar"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <TextView
        android:id="@+id/textViewNumeroP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textViewNumeroP"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewCantidad"
        app:layout_constraintStart_toStartOf="@+id/textViewCantidad"
        app:layout_constraintTop_toBottomOf="@+id/textViewCantidad" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="60dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNumeroP"
        app:layout_constraintStart_toEndOf="@+id/textViewNumeroP"
        app:layout_constraintTop_toTopOf="@+id/textViewNumeroP"
        app:srcCompat="@drawable/addicon" />
</androidx.constraintlayout.widget.ConstraintLayout>